--- a/tasks.json
+++ b/tasks.json
@@ -12,5 +12,12 @@
     "due": "2025-05-25",
     "done": false,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "스시",
+    "description": "스시",
+    "due": "2025-05-25",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
