--- a/tasks.json
+++ b/tasks.json
@@ -17,6 +17,13 @@
     "subject": "스시",
     "description": "스시",
     "due": "2025-05-25",
+    "done": true,
+    "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "ㅇ",
+    "description": "ㅇ",
+    "due": "2025-05-27",
     "done": false,
     "discord_id": "679286308299866112"
   }
