--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "subject": "d",
+    "description": "d",
+    "due": "2025-05-27",
+    "done": false,
+    "discord_id": "679286308299866112"
+  }
+]
