--- a/tasks.json
+++ b/tasks.json
@@ -1,9 +1,16 @@
 [
   {
-    "subject": "d",
-    "description": "d",
-    "due": "2025-05-27",
+    "subject": "스시",
+    "description": "설명",
+    "due": "2025-05-25",
     "done": false,
+    "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "컴수",
+    "description": "해석",
+    "due": "2025-05-26",
+    "done": true,
     "discord_id": "679286308299866112"
   }
 ]
