--- a/tasks.json
+++ b/tasks.json
@@ -12,5 +12,12 @@
     "due": "2025-05-26",
     "done": true,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "아",
+    "description": "아아",
+    "due": "2025-05-27",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
