--- a/tasks.json
+++ b/tasks.json
@@ -26,5 +26,12 @@
     "due": "2025-05-27",
     "done": false,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "응",
+    "description": "응",
+    "due": "2025-05-28",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
