--- a/tasks.json
+++ b/tasks.json
@@ -33,5 +33,12 @@
     "due": "2025-05-28",
     "done": false,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "ㅎ",
+    "description": "ㅎ",
+    "due": "2025-05-27",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
