--- a/tasks.json
+++ b/tasks.json
@@ -40,5 +40,12 @@
     "due": "2025-05-27",
     "done": false,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "ㅇ",
+    "description": "ㅇ",
+    "due": "2025-05-27",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
