--- a/tasks.json
+++ b/tasks.json
@@ -47,5 +47,12 @@
     "due": "2025-05-27",
     "done": false,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "ㅗ",
+    "description": "ㅗ",
+    "due": "2025-05-24",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
