--- a/tasks.json
+++ b/tasks.json
@@ -54,5 +54,12 @@
     "due": "2025-05-24",
     "done": false,
     "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "ㅂ",
+    "description": "ㅂ",
+    "due": "2025-05-25",
+    "done": false,
+    "discord_id": "679286308299866112"
   }
 ]
