--- a/tasks.json
+++ b/tasks.json
@@ -14,50 +14,8 @@
     "discord_id": "679286308299866112"
   },
   {
-    "subject": "아",
-    "description": "아아",
-    "due": "2025-05-27",
-    "done": false,
-    "discord_id": "679286308299866112"
-  },
-  {
-    "subject": "아",
-    "description": "아아",
-    "due": "2025-05-27",
-    "done": false,
-    "discord_id": "679286308299866112"
-  },
-  {
-    "subject": "응",
-    "description": "응",
-    "due": "2025-05-28",
-    "done": false,
-    "discord_id": "679286308299866112"
-  },
-  {
-    "subject": "ㅎ",
-    "description": "ㅎ",
-    "due": "2025-05-27",
-    "done": false,
-    "discord_id": "679286308299866112"
-  },
-  {
-    "subject": "ㅇ",
-    "description": "ㅇ",
-    "due": "2025-05-27",
-    "done": false,
-    "discord_id": "679286308299866112"
-  },
-  {
-    "subject": "ㅗ",
-    "description": "ㅗ",
-    "due": "2025-05-24",
-    "done": false,
-    "discord_id": "679286308299866112"
-  },
-  {
-    "subject": "ㅂ",
-    "description": "ㅂ",
+    "subject": "생법",
+    "description": "기말 준비",
     "due": "2025-05-25",
     "done": false,
     "discord_id": "679286308299866112"
