--- a/tasks.json
+++ b/tasks.json
@@ -1,26 +1,16 @@
 [
   {
-    "subject": "컴퓨터수학",
-    "description": "코딩 과제 제출",
+    "subject": "컴수",
+    "description": "코드 정리",
+    "due": "2025-05-25",
+    "done": false,
+    "discord_id": "679286308299866112"
+  },
+  {
+    "subject": "스시입",
+    "description": "소감문",
     "due": "2025-05-26",
-    "done": false
-  },
-  {
-    "subject": "스마트시티 입문",
-    "description": "녹화 강의 수강",
-    "due": "2025-05-24",
-    "done": false
-  },
-  {
-    "subject": "스마트시티 입문",
-    "description": "팀프로젝트 미팅",
-    "due": "2025-05-28",
-    "done": false
-  },
-  {
-    "subject": "AI 프로그래밍 입문",
-    "description": "팀프로젝트 발표준비",
-    "due": "2025-05-28",
-    "done": false
+    "done": true,
+    "discord_id": "679286308299866112"
   }
 ]
