--- a/tasks.json
+++ b/tasks.json
@@ -1,12 +1,5 @@
 [
   {
-    "subject": "컴수",
-    "description": "정리",
-    "due": "2025-05-26",
-    "done": true,
-    "discord_id": "679286308299866117"
-  },
-  {
     "subject": "생법",
     "description": "ppt 제작",
     "due": "2025-05-26",
@@ -14,16 +7,23 @@
     "discord_id": "679286308299866117"
   },
   {
-    "subject": "에프입",
-    "description": "조별과제",
+    "subject": "스시입",
+    "description": "소감문 작성",
     "due": "2025-05-27",
     "done": false,
     "discord_id": "679286308299866117"
   },
   {
-    "subject": "스시입",
-    "description": "조별미팅",
+    "subject": "에프입",
+    "description": "PPT 제작",
     "due": "2025-05-28",
+    "done": false,
+    "discord_id": "679286308299866117"
+  },
+  {
+    "subject": "컴수",
+    "description": "코드 해석",
+    "due": "2025-05-30",
     "done": false,
     "discord_id": "679286308299866117"
   }
